Added extract_cluster_centers.py and other updates.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 /venv
 /.idea
 /data/runs/sotu
+/data/images/ATE_cluster_plot.png
+/data/runs/ATE
+/data/speeches/ATE
+/data/speeches/ATE_order_list.txt
+
